fix the overflow in tab content

--- a/src/renderer/components/ui/tabs/tabs.module.scss
+++ b/src/renderer/components/ui/tabs/tabs.module.scss
@@ -1,7 +1,8 @@
 .Root {
 	display: flex;
 	flex-direction: column;
-	width: 300px;
+	width: 100%;
+	height: 100%;
 }
 
 .List {
